src/PathfindingVisualizer/Node/Node.css
.node {
  width: 23px;
  height: 23px;
  outline: 1px solid rgb(175, 216, 248);
  display: inline-block;
  -moz-user-select: none;
  -webkit-user-select: none;
  -webkit-touch-callout: none;
  -ms-user-select: none;
  cursor: default !important;
}

.node::selection {
  cursor: pointer;
}

.node-weight {
  background-image: url(../assets/weight.svg);
  background-repeat: no-repeat;
  background-position: center;
}

.node-finish {
  /* background-color: red !important; */
  background-image: url(../assets/finalNode.svg);
  background-repeat: no-repeat;
  background-position: center;
}

.node-start {
  /* background-color: green !important; */
  background-image: url(../assets/startNode.svg);
  background-repeat: no-repeat;
  background-position: center;
}

/* .node-wall {
  background-color: rgb(12, 53, 71) !important;
} */

.node-path {
  background-color: yellow;
}

.node-wall {
  background-color: rgb(12, 53, 71);
}
/* .node-wall {
  animation-name: wallAnimation;
  animation-duration: 0.3s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

@keyframes wallAnimation {
  0% {
    transform: scale(0.3);
    background-color: rgb(12, 53, 71);
  }

  50% {
    transform: scale(1.2);
    background-color: rgb(12, 53, 71);
  }

  100% {
    transform: scale(1);
    background-color: rgb(12, 53, 71);
  }
} */

.node-bomb {
  background-image: url(../assets/bomb.svg);
  background-repeat: no-repeat;
  background-position: center;
}

.node-visited {
  animation-name: visitedAnimation;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

.start-node-visited {
  background-image: url("../assets/startNode.svg");
  background-repeat: no-repeat;
  background-position: center;
  animation-name: visitedAnimation;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

.finish-node-visited {
  background-image: url("../assets/finalNode.svg");
  background-repeat: no-repeat;
  background-position: center;
  animation-name: visitedAnimation;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

@keyframes visitedAnimation {
  0% {
    transform: scale(0.3);
    background-color: rgba(0, 0, 66, 0.75);
    border-radius: 100%;
  }

  50% {
    background-color: rgba(17, 104, 217, 0.75);
  }

  75% {
    transform: scale(1.2);
    background-color: rgba(0, 217, 159, 0.75);
  }

  100% {
    transform: scale(1);
    background-color: rgba(0, 190, 218, 0.75);
  }
}

.node-shortest-path {
  animation-name: shortestPath;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}
.start-node-shortest-path {
  background-image: url("../assets/startNode.svg");
  background-repeat: no-repeat;
  background-position: center;
  animation-name: shortestPath;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}
.finish-node-shortest-path {
  background-image: url("../assets/finalNode.svg");
  background-repeat: no-repeat;
  background-position: center;
  animation-name: shortestPath;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  animation-delay: 0;
  animation-direction: alternate;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

@keyframes shortestPath {
  0% {
    transform: scale(0.6);
    background-color: rgb(255, 254, 106);
  }

  50% {
    transform: scale(1.2);
    background-color: rgb(255, 254, 106);
  }

  100% {
    transform: scale(1);
    background-color: rgb(255, 254, 106);
  }
}

/* .node-live-visited {
  background-color: rgba(0, 190, 218, 0.75);
}

node-live-shortest-path {
  background-color: rgb(255, 254, 106);
} */

